scripts/pulp-operator-repo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulp-web-route
  namespace: pulp
spec:
  hostnames:
    - pulp.onwalk.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: example-gateway
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: example-pulp-web-svc
          port: 24880
          weight: 1
